cards FIX: img non trovata, z-index, scroll

--- a/src/style/partials/_components.scss
+++ b/src/style/partials/_components.scss
@@ -4,29 +4,37 @@ main .movies .card,
 main .tvShows .card {
     height: 300px;
     width: calc(100% / 5);
-    overflow: visible;
+
+    .info {
+        background-color: black;
+
+        &:hover {
+            opacity: 1;
+            transition: 1s;
+            overflow-y: auto;
+
+        }
+
+        &:not(:hover) {
+            opacity: 0;
+            transition: 1s;
+        }
+    }
+
+    ;
 
     img.poster {
         position: absolute;
         top: 0px;
-        z-index: 2;
         width: 100%;
+    }
 
-        &:hover{
-            opacity: 0;
-            transition: 1s;
-        }
-
-        &:not(:hover){
-            opacity: 1;
-            transition: 1s;
-        }
-    };
+    ;
 
     img.lang {
         position: absolute;
         bottom: 20px;
         right: 20px;
         z-index: 1;
-    }   
+    }
 }
